[project]
name = "comfyui-mojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.8",
    "alembic>=1.16.4",
    "av>=14.2.0",
    "chardet>=5.2.0",
    "comfyui-embedded-docs==0.2.4",
    "comfyui-frontend-package==1.24.4",
    "comfyui-workflow-templates==0.1.52",
    "einops>=0.8.1",
    "gitpython>=3.1.45",
    "huggingface-hub>0.20",
    "kornia>=0.7.1",
    "line-profiler>=5.0.0",
    "matrix-nio>=0.25.2",
    "max-torch-backend",
    "numpy>=1.25.0",
    "pillow>=11.3.0",
    "pip>=25.2",
    "psutil>=7.0.0",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pygithub>=2.7.0",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "safetensors>=0.4.2",
    "scalene>=1.5.53",
    "scipy>=1.16.1",
    "sentencepiece>=0.2.0",
    "snakeviz>=2.2.2",
    "soundfile>=0.13.1",
    "spandrel>=0.4.1",
    "sqlalchemy>=2.0.43",
    "tokenizers>=0.13.3",
    "toml>=0.10.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchsde>=0.2.6",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.37.2",
    "typer>=0.16.0",
    "typing-extensions>=4.14.1",
    "uv>=0.8.8",
    "yarl>=1.18.0",
]

[tool.uv.sources]
max-torch-backend = { workspace = true }

[tool.uv.workspace]
members = [
    "submodule/max-torch-backend",
]

